Update 't70gbprmd-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-66122c0500.qh73.p3.openshiftapps.com/rhtap/rhtap-qe:22c4e02cab229b639b412419aa989e344992da85@sha256:0726995baddd0b040b2e5b60661fcd18eb7785a1d14c1c2b231b3648a55aac4a

--- a/components/t70gbprmd-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/t70gbprmd-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t70gbprmd-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-66122c0500.qh73.p3.openshiftapps.com/rhtap/rhtap-qe:22c4e02cab229b639b412419aa989e344992da85@sha256:0726995baddd0b040b2e5b60661fcd18eb7785a1d14c1c2b231b3648a55aac4a
+          name: container-image
